--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,3 +15,5 @@ jobs:
     - uses: actions/checkout@v3
     - name: build server
       run: cd server; make
+    - name: build app
+      run: cd src; make
