--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,6 +13,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: download dependencies
+      run: sudo apt install -y libncurses5-dev libncursesw5-dev
     - name: build server
       run: cd server; make
     - name: build app
