--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -14,8 +14,14 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: download dependencies
-      run: sudo apt install -y libncurses5-dev libncursesw5-dev
+      run: |
+        sudo apt update
+        sudo apt install -y libncurses5-dev libncursesw5-dev
     - name: build server
-      run: cd server; make
+      run: |
+        cd server
+        make
     - name: build app
-      run: cd src; make
+      run: |
+        cd src
+        make
