--- a/.github/workflows/docker-image-edge.yml
+++ b/.github/workflows/docker-image-edge.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag my-image-name:edge"$(date +%s)"
+        run: docker build . --file Dockerfile --tag hikari/messenger:edge"$(date +%s)"
       - name: Push the Docker image
         run: docker push hikari/messenger:edge"$(date +%s)"
 
