--- a/.github/workflows/docker-image-edge.yml
+++ b/.github/workflows/docker-image-edge.yml
@@ -14,6 +14,13 @@ jobs:
       - uses: actions/checkout@v3
       - name: Build the Docker image
         run: docker build . --file Dockerfile --tag hikari/messenger:edge
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
       - name: Push the Docker image
         run: docker push hikari/messenger:edge
 
