--- a/.github/workflows/docker-image-stable.yml
+++ b/.github/workflows/docker-image-stable.yml
@@ -8,12 +8,21 @@ on:
 
 jobs:
 
-  build:
+  push:
 
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+        run: docker build . --file Dockerfile --tag hikari03/messenger:stable
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Push the Docker image
+        run: docker push hikari03/messenger:stable
 
