--- a/.github/workflows/docker-image-stable.yml
+++ b/.github/workflows/docker-image-stable.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag hikari03/messenger:stable
+        run: docker build . --file server/Dockerfile --tag hikari03/messenger:stable
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
