--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,9 +1,13 @@
 FROM alpine:latest
 LABEL authors="hikari03"
 
+COPY .. /messenger
+
 RUN apk add --no-cache g++ make git && \
-    git clone https://github.com/Hikari03/messenger.git && \
     cd messenger/server && \
+    make clean_o clean_e && \
     make -j$(nproc)
+
+EXPOSE 6999
 
 ENTRYPOINT ["/messenger/server/server"]
