Makefile: try to make more portable makefile

--- a/src/Makefile
+++ b/src/Makefile
@@ -13,19 +13,23 @@ TARGET := blink
 SOURCES := $(wildcard *.c *.cpp)
 OBJECTS := $(patsubst src%,obj%, $(patsubst %.c,%.o, $(patsubst %.cpp,%.o,$(SOURCES))))
 
-INCLUDE := -I. -I/usr/include/ncursesw
+INCLUDE := -I.
 LIBPATH :=
-LIBS :=
+LIBS := -lncursesw
 
-FLAGS := -Wall
-CCFLAGS := $(FLAGS) -std=c99
-CXXFLAGS := $(FLAGS) -std=c++23
+STATICFLAG :=
+FLAGS := -Wall -Wextra -Wpedantic -Werror -O2
+CXXFLAGS := $(FLAGS) -std=c++23 $(STATICFLAG)
 
 CC := gcc
 CXX := g++
 
 all: $(OBJECTS)
-	$(CXX) $(CXXFLAGS) $(INCLUDE) $(OBJECTS) -o $(TARGET) $(LIBPATH) $(LIBS) -lncursesw
+	$(CXX) $(CXXFLAGS) $(INCLUDE) $(OBJECTS) -o $(TARGET) $(LIBPATH) $(LIBS)
+
+static:
+	echo "Building static binary..."
+	@$(MAKE) all STATICFLAG=-static
 
 %.o: %.c
 	$(CXX) $(CXXFLAGS) $(INCLUDE) -c $< -o $@
@@ -33,7 +37,7 @@ all: $(OBJECTS)
 %.o: %.cpp
 	$(CXX) $(CXXFLAGS) $(INCLUDE) -c $< -o $@
 
-.PHONY: clean_o clean_e
+.PHONY: clean_o clean_e static all
 
 clean_o:
 	rm -rf *.o
