Makefile: add static build and ncursesw build

--- a/src/Makefile
+++ b/src/Makefile
@@ -15,7 +15,7 @@ OBJECTS := $(patsubst src%,obj%, $(patsubst %.c,%.o, $(patsubst %.cpp,%.o,$(SOUR
 
 INCLUDE := -I.
 LIBPATH :=
-LIBS := -lncursesw
+LIBS :=-lncursesw
 
 STATICFLAG :=
 FLAGS := -Wall -Wextra -Wpedantic -Werror -O2
@@ -24,12 +24,31 @@ CXXFLAGS := $(FLAGS) -std=c++23 $(STATICFLAG)
 CC := gcc
 CXX := g++
 
+build:
+	@$(MAKE) all -j$(nproc)
+
+build_w_custom_ncurses:
+	@$(MAKE) custom_ncurses
+	@$(MAKE) all -j$(nproc) INCLUDE="-I$(PWD)/ncurses-build" LIBPATH="-L$(PWD)/ncurses-build/lib"
+
 all: $(OBJECTS)
 	$(CXX) $(CXXFLAGS) $(INCLUDE) $(OBJECTS) -o $(TARGET) $(LIBPATH) $(LIBS)
 
 static:
 	echo "Building static binary..."
-	@$(MAKE) all STATICFLAG=-static
+	@$(MAKE) clean_o
+	@$(MAKE) clean_e
+	if [ ! -d "ncurses-build" ]; then $(MAKE) custom_ncurses; fi
+	@$(MAKE) all -j$(nproc) STATICFLAG="-static -static-libgcc" INCLUDE="-I$(PWD)/ncurses-build" LIBPATH="-L$(PWD)/ncurses-build/lib"
+	@$(MAKE) clean_o
+
+custom_ncurses:
+	if [ -d "ncurses-build" ]; then \
+  	echo "ERROR: ncurses-build directory already exists. If you really want to build again, remove it."; \
+ 	exit 1; \
+ 	fi
+	mkdir -p ncurses-build
+	cd ncurses && ./configure --prefix=$(PWD)/ncurses-build --enable-widec --with-termlib && make -j$(nproc) && make -j$(nproc) install
 
 %.o: %.c
 	$(CXX) $(CXXFLAGS) $(INCLUDE) -c $< -o $@
@@ -37,10 +56,13 @@ static:
 %.o: %.cpp
 	$(CXX) $(CXXFLAGS) $(INCLUDE) -c $< -o $@
 
-.PHONY: clean_o clean_e static all
+.PHONY: clean_o clean_e static all custom_ncurses build clean
 
 clean_o:
 	rm -rf *.o
 
 clean_e:
 	rm -f $(TARGET)
+
+clean: clean_o clean_e
+	rm -rf ncurses-build
