--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/ncurses"]
 	path = src/ncurses
-	url = git@github.com:mirror/ncurses.git
+	url = https://github.com/mirror/ncurses.git
