--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -25,3 +25,14 @@ jobs:
       run: |
         cd src
         make
+  try_static_app:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: get submodules
+      run: |
+        git submodule update --init --recursive
+    - name: compile_app
+      run: |
+        cd src
+        make static
