Makefile: use tinfo when needed

--- a/src/Makefile
+++ b/src/Makefile
@@ -39,6 +39,7 @@ static:
 	@$(MAKE) clean_o
 	@$(MAKE) clean_e
 	if [ ! -d "ncurses-build" ]; then $(MAKE) custom_ncurses; fi
+	if [ $(ldconfig -p | grep tinfo) ]; then LIBS+=" -ltinfo"; fi
 	@$(MAKE) all -j$(nproc) STATICFLAG="-static -static-libgcc" INCLUDE="-I$(PWD)/ncurses-build" LIBPATH="-L$(PWD)/ncurses-build/lib"
 	@$(MAKE) clean_o
 
