--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -14,7 +14,7 @@ jobs:
     - name: download dependencies
       run: |
         sudo apt update
-        sudo apt install -y libncurses5-dev libncursesw5-dev
+        sudo apt install -y libncurses5-dev libncursesw5-dev terminfo
     - name: build server
       run: |
         cd server
