--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -14,7 +14,7 @@ jobs:
     - name: download dependencies
       run: |
         sudo apt update
-        sudo apt install -y libncurses5-dev libncursesw5-dev terminfo
+        sudo apt install -y libncurses5-dev libncursesw5-dev
     - name: build server
       run: |
         cd server
@@ -27,6 +27,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+    - name: get terminfo
+      run: |
+        sudo apt update
+        sudo apt install -y terminfo
+
     - name: get submodules
       run: |
         git submodule update --init --recursive
