--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/ncurses"]
-	path = src/ncurses
+	path = src/include/ncurses
 	url = https://github.com/mirror/ncurses.git
+[submodule "src/include/librender"]
+	path = src/include/librender
+	url = https://github.com/Hikari03/librender.git
