Makefile: compile app with dynamic library todo: make also static build working

--- a/src/Makefile
+++ b/src/Makefile
@@ -10,17 +10,19 @@
 # - main
 
 TARGET := blink
-SOURCES := $(wildcard *.c *.cpp include/librender/*.cpp include/librender/*..h)
+SOURCES := $(wildcard *.c *.cpp)
 OBJECTS := $(patsubst src%,obj%, $(patsubst %.c,%.o, $(patsubst %.cpp,%.o,$(SOURCES))))
 
-INCLUDE := -I. -Iinclude
-LIBPATH :=
-LIBS :=-lncursesw
+INCLUDE :=-I. -Iinclude
+LIBPATH :=-Linclude/librender
+LIBS :=-lncursesw -lhikrender
+
+THISDIR := $(shell pwd)
 
 ifeq ($(shell ldconfig -p | grep tinfo > /dev/null; echo $$? ),0)
-STATICLIBS := -lncursesw -ltinfo
+STATICLIBS :=-lncursesw -ltinfo
 else
-STATICLIBS := -lncursesw -ltinfow
+STATICLIBS :=-lncursesw -ltinfow
 endif
 
 STATICFLAG :=
@@ -31,50 +33,58 @@ CC := gcc
 CXX := g++
 
 build:
-	@git submodule init
-	@git submodule update src/include/librender
 	@$(MAKE) all -j$(nproc)
 
+install:
+	cp $(TARGET) ~/.local/bin/
+	$(MAKE) -C include/librender install
+
 build_w_custom_ncurses:
-	@if [ ! -d "ncurses-build" ]; then $(MAKE) custom_ncurses; fi
-	@$(MAKE) all -j$(nproc) INCLUDE="-I$(PWD)/ncurses-build" LIBPATH="-L$(PWD)/ncurses-build/lib"
+	@if [ ! -d "include/ncurses-build" ]; then $(MAKE) custom_ncurses; fi
+	@$(MAKE) all -j$(nproc) INCLUDE="-I$(PWD)/include/ncurses-build" LIBPATH="-L$(PWD)/include/ncurses-build/lib"
 
-all: $(OBJECTS)
-	$(CXX) $(CXXFLAGS) $(INCLUDE) $(OBJECTS) -o $(TARGET) $(LIBPATH) $(LIBS)
+all: $(OBJECTS) build_librender
+	$(CXX) $(CXXFLAGS) $(INCLUDE) $(addprefix obj/,$(OBJECTS)) -o $(TARGET) $(LIBPATH) $(LIBS)
 
-static:
+build_librender:
+	@git submodule init
+	@git submodule update include/librender
+	@$(MAKE) -C include/librender all -j$(nproc)
+
+static: build_librender
 	echo "Building static binary..."
 	@$(MAKE) clean_o
 	@$(MAKE) clean_e
-	@if [ ! -d "ncurses-build" ]; then $(MAKE) custom_ncurses; fi
-	@$(MAKE) all -j$(nproc) STATICFLAG="-static -static-libgcc" INCLUDE="-I$(PWD)/ncurses-build" LIBPATH="-L$(PWD)/ncurses-build/lib" LIBS="$(STATICLIBS)"
+	@if [ ! -d "include/ncurses-build" ]; then $(MAKE) custom_ncurses; fi
+	@$(MAKE) all -j$(nproc) STATICFLAG="-static -static-libgcc" INCLUDE="-I$(PWD)/include/ncurses-build" LIBPATH="-L$(PWD)/include/ncurses-build/lib" LIBS="$(STATICLIBS)"
 
 custom_ncurses:
-	@if [ -d "ncurses-build" ]; then \
-  	echo "ERROR: ncurses-build directory already exists. If you really want to build again, remove it."; \
+	@if [ -d "include/ncurses-build" ]; then \
+  	echo "ERROR: include/ncurses-build directory already exists. If you really want to build again, remove it."; \
  	exit 1; \
  	fi
 	@git submodule init
 	@git submodule update
-	@mkdir -p ncurses-build
+	@mkdir -p include/ncurses-build
 	@cd include/ncurses && \
- 		./configure --prefix=$(PWD)/ncurses-build --enable-widec --with-termlib \
+ 		./configure --prefix=$(PWD)/include/ncurses-build --enable-widec --with-termlib \
  		&& make -j$(nproc) \
  		&& make -j$(nproc) install
 
-%.o: %.c
-	$(CXX) $(CXXFLAGS) $(INCLUDE) -c $< -o $@
 
 %.o: %.cpp
-	$(CXX) $(CXXFLAGS) $(INCLUDE) -c $< -o $@
+	$(CXX) $(CXXFLAGS) $(INCLUDE) -c $< -o obj/$@
 
 .PHONY: clean_o clean_e static all custom_ncurses build clean
 
 clean_o:
-	rm -rf *.o
+	rm obj/*.o
 
 clean_e:
 	rm -f $(TARGET)
 
+make_obj:
+	mkdir -p obj
+
 clean: clean_o clean_e
-	rm -rf ncurses-build
+	rm -rf include/ncurses-build
