--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/include/librender"]
 	path = src/include/librender
 	url = https://github.com/Hikari03/librender.git
+[submodule "include/libsodium"]
+	path = src/include/libsodium
+	url = https://github.com/jedisct1/libsodium.git
