Makefile: fix wrong static build includes

--- a/src/Makefile
+++ b/src/Makefile
@@ -28,7 +28,6 @@ STATICFLAG :=
 FLAGS := -Wall -Wextra -Wpedantic -Werror -O2
 CXXFLAGS := $(FLAGS) -std=c++23 $(STATICFLAG)
 
-CC := gcc
 CXX := g++
 
 build: build_librender_dynamic make_obj
@@ -72,8 +71,9 @@ static: make_obj
 	@$(MAKE) clean_o
 	@$(MAKE) clean_e
 	@if [ ! -d "include/libsodium-build" ]; then $(MAKE) build_libsodium; fi
+	@git submodule update include/librender
 	@$(MAKE) -C include/librender static
-	@$(MAKE) all -j$(nproc) INCLUDE=" -Iinclude/libsodium-build/include -static -static-libgcc" \
+	@$(MAKE) all -j$(nproc) INCLUDE="-Iinclude/librender/ncurses-build/include -Iinclude/librender/ncurses-build/include/ncursesw -Iinclude/libsodium-build/include -static -static-libgcc" \
  		LIBPATH="-Linclude/librender -Linclude/librender/ncurses-build/lib -Linclude/libsodium-build/lib" \
  		LIBS="-lhikrender -lsodium $(STATICLIBS)"
 
