--- a/src/Makefile
+++ b/src/Makefile
@@ -29,7 +29,7 @@ build: build_librender_dynamic make_obj
 	@$(MAKE) all -j$(nproc)
 
 install_dynamic:
-	cp $(TARGET) /usr/bin/
+	sudo install $(TARGET) /usr/bin/
 	$(MAKE) -C include/librender install
 
 install_static:
