--- a/src/Makefile
+++ b/src/Makefile
@@ -1,23 +1,14 @@
 # stolen from https://gist.github.com/freelsn/fe5f160cf564e209dc9c5673296ee813
 
-# - inc/
-#     - *.h
-# - src/
-#     - *.c
-#     - *.cpp
-# - obj/
-#     - *.o
-# - main
-
 TARGET := blink
 SOURCES := $(wildcard *.c *.cpp)
 OBJECTS := $(patsubst src%,obj%, $(patsubst %.c,%.o, $(patsubst %.cpp,%.o,$(SOURCES))))
 
 INCLUDE :=-I. -Iinclude $(shell pkg-config -cflags gtkmm-4.0)
 LIBPATH :=
-LIBS :=-lncursesw -lsodium $(shell pkg-config -libs gtkmm-4.0)
+LIBS :=-lsodium $(shell pkg-config -libs gtkmm-4.0)
 
-STATICLIBS :=-lncursesw -ltinfow
+STATICLIBS :=
 
 STATICFLAG :=
 FLAGS := -Wall -Wextra -Wpedantic -Werror -O2
@@ -33,10 +24,10 @@ install:
 	sudo install -Dm644 $(TARGET).desktop /usr/share/applications/$(TARGET).desktop
 	sudo mkdir -p /usr/share/blink
 	sudo install $(TARGET).ui /usr/share/blink/$(TARGET).ui
-	sudo install -Dm644 blink.png /usr/share/pixmaps/blink.png
-	sudo install -Dm644 blink_32x32.png /usr/share/icons/hicolor/32x32/apps/blink.png
-	sudo install -Dm644 blink_64x64.png /usr/share/icons/hicolor/64x64/apps/blink.png
-	sudo install -Dm644 blink.png /usr/share/icons/hicolor/512x512/apps/blink.png
+	sudo install -Dm644 assets/blink.png /usr/share/pixmaps/blink.png
+	sudo install -Dm644 assets/blink_32x32.png /usr/share/icons/hicolor/32x32/apps/blink.png
+	sudo install -Dm644 assets/blink_64x64.png /usr/share/icons/hicolor/64x64/apps/blink.png
+	sudo install -Dm644 assets/blink.png /usr/share/icons/hicolor/512x512/apps/blink.png
 
 all: $(OBJECTS)
 	$(CXX) $(CXXFLAGS) $(INCLUDE) $(addprefix obj/,$(OBJECTS)) -o $(TARGET) $(LIBPATH) $(LIBS)
