--- a/src/Makefile
+++ b/src/Makefile
@@ -36,6 +36,7 @@ win_release: make_obj
 	cp $(TARGET).exe "blink_win/$(TARGET).exe"
 	cp -r assets/dlls/* "blink_win/"
 	cp $(TARGET).ui "blink_win/$(TARGET).ui"
+	cp style.css "blink_win/style.css"
 	zip -r "blink_win.zip" "blink_win"
 	rm -rf "blink_win"
 
@@ -50,6 +51,7 @@ install:
 	sudo install -Dm644 $(TARGET).desktop /usr/share/applications/cz.hikari03.blink.desktop
 	sudo mkdir -p /usr/share/blink
 	sudo install $(TARGET).ui /usr/share/blink/$(TARGET).ui
+	sudo install style.css /usr/share/blink/style.css
 	sudo install -Dm644 assets/blink.png /usr/share/pixmaps/cz.hikari03.blink.png
 	sudo install -Dm644 assets/blink_32x32.png /usr/share/icons/hicolor/32x32/apps/cz.hikari03.blink.png
 	sudo install -Dm644 assets/blink_64x64.png /usr/share/icons/hicolor/64x64/apps/cz.hikari03.blink.png
@@ -60,6 +62,7 @@ install_win:
 	cp $(TARGET).exe /c/Program\ Files/Blink/$(TARGET).exe
 	cp -r assets/dlls/* /c/Program\ Files/Blink/
 	cp $(TARGET).ui $(APPDATA)/Blink/$(TARGET).ui
+	cp style.css $(APPDATA)/Blink/style.css
 	cp assets/blink.png /c/Program\ Files/Blink/blink.png
 	cmd //c assets\\create_shortcut.bat $(TARGET_PATH) $(SHORTCUT_PATH) $(DESCRIPTION)
 
