--- a/src/Makefile
+++ b/src/Makefile
@@ -37,7 +37,7 @@ win_release: make_obj
 	cp -r assets/dlls/* "blink_win/"
 	cp $(TARGET).ui "blink_win/$(TARGET).ui"
 	cp style.css "blink_win/style.css"
-	cp -r assets/gktcss "blink_win/assets"
+	cp -r assets/gtkcss "blink_win/assets"
 
 	zip -r "blink_win.zip" "blink_win"
 	rm -rf "blink_win"
