server: implement chat persistent storage bug: not writing to it

--- a/server/Makefile
+++ b/server/Makefile
@@ -27,6 +27,7 @@ CXX := g++
 
 build:
 	@$(MAKE) all -j$(nproc)
+	if [ ! -e messagesFile ]; then touch messagesFile; fi
 
 debug:
 	@$(MAKE) all -j$(nproc) DEBUGFLAGS="-g"
