server: fix docker-entrypoint

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,13 +1,12 @@
 FROM alpine:latest
 LABEL authors="hikari03"
 
-COPY .. /messenger
+COPY . /blink
 
 RUN apk add --no-cache g++ make git libsodium-dev && \
-    cd messenger/server && \
-    make clean_o clean_e && \
+    cd blink/server && \
     make
 
 EXPOSE 6999
 
-ENTRYPOINT ["/messenger/server/docker-entrypoint.sh"]
+ENTRYPOINT ["/blink/server/docker-entrypoint.sh"]
