server: debug docker

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -5,8 +5,11 @@ COPY . /blink
 
 RUN apk add --no-cache g++ make git libsodium-dev && \
     cd blink/server && \
+    make clean && \
     make
 
 EXPOSE 6999
 
-ENTRYPOINT ["/blink/server/docker-entrypoint.sh"]
+WORKDIR /blink/server
+
+ENTRYPOINT ["./blink-server"]
